fixed a spacing issue on the intro page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -197,16 +197,17 @@
   .title {
     display: flex;
     flex-direction: column-reverse;
-    align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
   }
   .intro {
     display: flex;
     flex-direction: column;
-    align-items: center;
     font-size: 1.8rem;
   }
   .introImg {
-    width: 45vw;
+    width: 50vw;
+  }
+  .introName {
+    margin: 0;
   }
 }
